<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/back"
        style="@style/IconButtonStyle"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="37dp"
        android:backgroundTint="@color/blue"
        app:cornerRadius="15dp"
        app:icon="@drawable/ic_back"
        app:iconTint="@color/white"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/add_address_title"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/add_address_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:fontFamily="@font/mark_pro_medium"
        android:text="@string/add_address_title"
        android:textAlignment="textEnd"
        android:textColor="@color/blue"
        android:textSize="@dimen/text_size_big"
        app:layout_constraintBottom_toBottomOf="@id/back"
        app:layout_constraintLeft_toRightOf="@id/back"
        app:layout_constraintRight_toLeftOf="@id/to_address"
        app:layout_constraintTop_toTopOf="@id/back" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardCornerRadius="25dp"
        android:backgroundTint="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/basket_list" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/basket_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="49dp"
        android:paddingTop="57dp"
        android:elevation="100dp"
        app:layout_constraintBottom_toTopOf="@id/separator_top"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cart_title" />

    <View
        android:id="@+id/separator_top"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginBottom="15dp"
        android:background="#40FFFFFF"
        android:elevation="100dp"
        app:layout_constraintBottom_toTopOf="@id/sum_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/sum_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="55dp"
        android:layout_marginBottom="12dp"
        android:elevation="100dp"
        android:fontFamily="@font/mark_pro_regular"
        android:text="@string/sum_title"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_normal"
        app:layout_constraintBottom_toTopOf="@id/delivery_title"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/sum_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="35dp"
        android:elevation="100dp"
        android:fontFamily="@font/mark_pro_bold"
        android:minWidth="73dp"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_normal"
        app:layout_constraintBottom_toBottomOf="@id/sum_title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/sum_title"
        tools:text="$6,000 us" />

    <TextView
        android:id="@+id/delivery_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="55dp"
        android:layout_marginBottom="26dp"
        android:elevation="100dp"
        android:fontFamily="@font/mark_pro_regular"
        android:text="@string/delivery_title"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_normal"
        app:layout_constraintBottom_toTopOf="@id/separator_bottom"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/delivery_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="35dp"
        android:elevation="100dp"
        android:fontFamily="@font/mark_pro_bold"
        android:minWidth="80dp"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_normal"
        app:layout_constraintBottom_toBottomOf="@id/delivery_title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/delivery_title"
        tools:text="Free" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/to_address"
        style="@style/IconButtonStyle"
        android:layout_marginTop="37dp"
        android:layout_marginRight="35dp"
        android:backgroundTint="@color/orange"
        app:cornerRadius="15dp"
        app:icon="@drawable/ic_location"
        app:iconTint="@color/white"
        app:layout_constraintLeft_toRightOf="@id/add_address_title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cart_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="50dp"
        android:elevation="100dp"
        android:fontFamily="@font/mark_pro_bold"
        android:text="@string/my_cart"
        android:textColor="@color/blue"
        android:textSize="@dimen/text_size_augmented"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back" />

    <View
        android:id="@+id/separator_bottom"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginBottom="27dp"
        android:elevation="100dp"
        android:background="#33FFFFFF"
        app:layout_constraintBottom_toTopOf="@id/checkout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/checkout"
        style="@style/IconButtonStyle"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginHorizontal="44dp"
        android:layout_marginBottom="44dp"
        android:backgroundTint="@color/orange"
        android:elevation="100dp"
        android:fontFamily="@font/mark_pro_bold"
        android:letterSpacing="0"
        android:text="@string/checkout"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_big"
        app:cornerRadius="15dp"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>